[workspace]
members = ["violet-wgpu"]

[package]
name = "violet"
version = "0.0.1"
edition = "2021"
authors = ["Tei Roberts"]
description = "Retained mode GUI library"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/violet"
repository = "https://github.com/ten3roberts/violet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
flax = { git = "https://github.com/ten3roberts/flax", version = "0.6.0", features = [
    "derive",
] }

futures-signals = "0.3"
itertools = "0.12"
glam = { version = "0.24", features = ["bytemuck"] }
futures = "0.3"
flume = "0.11"
parking_lot = "0.12"
slotmap = "1.0"
anyhow = "1.0"
once_cell = "1.18"
slab = "0.4"
tynm ="0.1"

bytemuck = { version = "1.13", features = ["derive"] }
winit = "0.28"
wgpu = { version = "0.17" }
palette = { version = "0.7", features = ["serializing"] }
dashmap = "5.4"
image = { version = "0.24", default_features = false, features = ["png", "jpeg"] }
color-hex = "0.2"
serde = { version = "1.0", features = ["derive"] }

tracing = "0.1"
pin-project = "1.1"

cosmic-text = "0.11"
guillotiere = "0.6"
bytes = "1.5"
more-asserts = "0.3"
unicode-segmentation="1.0"

[dependencies]
flax.workspace = true

futures-signals.workspace = true
itertools.workspace = true
glam.workspace = true
futures.workspace = true
flume.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
anyhow.workspace = true
once_cell.workspace = true
slab.workspace = true
tynm.workspace = true

bytemuck.workspace = true
palette.workspace = true
dashmap.workspace = true
image.workspace = true
color-hex.workspace = true
serde.workspace = true
cosmic-text.workspace = true
winit.workspace = true

tracing.workspace = true
pin-project.workspace = true

bytes.workspace = true
more-asserts.workspace = true
unicode-segmentation="1.0"

[dev-dependencies]
tokio = { version = "1.0", default_features= false, features = ["macros"] }
serde_json = "1.0"
tracing-tree = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }
violet-wgpu = { path = "violet-wgpu" }


[profile.dev.package.image]
opt-level = 2

[profile.dev.package.parking_lot]
opt-level = 2

[patch.crates-io]
palette = { git = "https://github.com/Ogeon/palette" }
