[workspace]
members = [ "violet-wgpu", "violet-core", "violet-demo" ]
exclude = [ "flax" ]
  
[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Tei Roberts"]
description = "Retained mode GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ten3roberts/violet"

[package]
name = "violet"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
documentation = "https://docs.rs/violet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
flax = { git = "https://github.com/ten3roberts/flax", version = "0.7.0", features = [
    "derive",
    "puffin",
] }

atomic_refcell = "0.1"
futures-signals = "0.3"
itertools = "0.13"
glam = { version = "0.28", features = ["bytemuck"] }
futures = "0.3"
futures-concurrency = "7.6"
flume = "0.11"
parking_lot = "0.12"
slotmap = "1.0"
anyhow = "1.0"
once_cell = "1.19"
slab = "0.4"
tynm ="0.1"
tokio = { version = "1.39", default-features = false, features = ["macros", "rt"] }
arrayvec = "0.7"
sync_wrapper = "1.0"
smallvec = "1.13"
arboard = "3.4"

bytemuck = { version = "1.17", features = ["derive"] }
winit = "0.30"
wgpu = { version = "22.1", default-features = false, features = ["fragile-send-sync-non-atomic-wasm", "webgl", "wgsl"] }
palette = { version = "0.7", features = ["serializing"] }
dashmap = "6.0"
image = { version = "0.25", default_features = false, features = ["png", "jpeg"] }
color-hex = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.4", features = ["serde"] }
rfd = "0.14"

tracing = "0.1"
pin-project = "1.1"

cosmic-text = { version = "0.12", features = ["wasm-web"] }
guillotiere = "0.6"
bytes = "1.7"
more-asserts = "0.3"
unicode-segmentation="1.11"
lru = "0.12"

puffin = "0.19"
puffin_http = "0.16"
gloo-timers = "0.3"
web-time = "1.1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Clipboard"] }
tracing-tree = "0.4"
heck = "0.5"
ordered-float = "4.2"

[dependencies]
violet-wgpu = { path = "violet-wgpu" }
violet-core = { path = "violet-core" }
glam.workspace = true
palette.workspace = true
futures-signals.workspace = true
flax.workspace = true
lru.workspace = true
web-time.workspace = true

[dev-dependencies]
anyhow.workspace = true
flume.workspace = true
flax.workspace = true
itertools.workspace = true
color-hex.workspace = true
tracing.workspace = true
futures.workspace = true

tokio = { version = "1.39", default_features= false, features = ["macros"] }
serde_json = "1.0"

tracing-tree.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }


[profile.dev.package.image]
opt-level = 2

[profile.dev.package.parking_lot]
opt-level = 2

[profile.dev.package.puffin]
opt-level = 2

[profile.dev.package.puffin_server]
opt-level = 2

[profile.dev.package.cosmic-text]
opt-level = 2

[patch.crates-io]
palette = { git = "https://github.com/Ogeon/palette" }

[profile.release]
debug = true
