[package]
name = "violet-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
violet = { path = ".." }
wasm-bindgen = "0.2.91"
console_error_panic_hook = "0.1.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-web = "0.1"
web-sys = { version = "0.3", features = ["Gpu", "CanvasRenderingContext2d", "GpuCanvasContext", "GpuRenderBundle"] }
ordered-float.workspace = true

wgpu.workspace = true

glam.workspace = true
futures.workspace = true
wasm-bindgen-futures.workspace = true
itertools.workspace = true
tracing-tree.workspace = true
puffin.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
rfd.workspace = true
anyhow.workspace = true
flume.workspace = true
heck.workspace = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
