[package]
name = "violet-web-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
violet = { path = ".." }
wasm-bindgen = "0.2.91"
console_error_panic_hook = "0.1.6"
tracing-subscriber = "0.3"
tracing-web = "0.1"
web-sys = { version = "0.3", features = ["Gpu", "CanvasRenderingContext2d", "GpuCanvasContext", "GpuRenderBundle"] }

wgpu.workspace = true

glam.workspace = true
wasm-bindgen-futures = "0.4"
